# economista

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md
docs/development/: handbook.md
examples/: data_search_exploration.ipynb  world_bank_gdp.ipynb  world_bank_gdp_growth.ipynb  world_bank_inflation.ipynb  world_bank_population.ipynb
src/economista/: __init__.py  _version.py
src/economista/core/: __init__.py  cache.py  config.py  dataset.py  errors.py  metadata.py  query.py  schema.py
src/economista/data/: __init__.py  api.py  base.py  registry.py
src/economista/data/sources/: __init__.py  world_bank.py
tests/: test_dataset.py  test_import.py  test_metadata.py  test_package_metadata.py  test_query.py  test_registry.py  test_schema.py  test_world_bank.py
tests/fixtures/world_bank/: geos.json  indicator.json  observations.json  search.json  topics.json
